# DatabaseCourseDesign

./: .gitattributes  .gitignore  Makefile  PULL_REQUEST.md  README.md  start_linux.sh
backend/: CMakeLists.txt  main.cpp
backend/build-wsl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  community_health_server  community_health_tests  compile_commands.json
backend/controllers/: AuthController.cpp  AuthController.h  DiseaseController.cpp  DiseaseController.h  HealthController.cpp  HealthController.h  MyHealthController.cpp  MyHealthController.h  ResidentController.cpp  ResidentController.h  UserController.cpp  UserController.h  VisitController.cpp  VisitController.h
backend/dao/: DiseaseDAO.cpp  DiseaseDAO.h  HealthMeasurementDAO.cpp  HealthMeasurementDAO.h  ResidentDAO.cpp  ResidentDAO.h  RoleDAO.cpp  RoleDAO.h  UserDAO.cpp  UserDAO.h  VisitLogDAO.cpp  VisitLogDAO.h
backend/include/: README.md
backend/models/: ChronicDisease.h  Community.h  HealthMeasurement.h  HealthRecord.h  Resident.h  ResidentDisease.h  Role.h  User.h  VisitLog.h
backend/services/: AuthService.cpp  AuthService.h  DiseaseService.cpp  DiseaseService.h  HealthService.cpp  HealthService.h  MyHealthService.cpp  MyHealthService.h  ResidentService.cpp  ResidentService.h  VisitService.cpp  VisitService.h
backend/tests/: test_all.cpp
backend/utils/: AuthSessionManager.h  DatabaseManager.cpp  DatabaseManager.h  ResponseHelper.h
docs/: API接口文档.md  PR-bugfix-startup-hardening.md  数据库设计文档.md  课程设计要求.md  项目使用说明.md  项目分工说明.md
frontend/css/: style.css
frontend/js/: api.js  auth.js  visits.js
frontend/pages/: dashboard.html  health.html  login.html  residents.html  visits.html
frontend_old/css/: style.css
frontend_old/js/: api.js  health.js  icons.js  residents.js  users.js
frontend_old/pages/: dashboard.html  health.html  residents.html  users.html  visits.html
plans/: frontend-vue-test-plan.md
release/: README.md
release/config/: app.env.example
release/scripts/: start_windows.bat
sql/: init.sql  permissions.sql  procedures.sql  reset_to_framework.sql  seed.sql  seed_massive.sql  seed_requirement_test.sql  triggers.sql  views.sql
tests/: frontend-smoke.spec.js
vue-frontend/: tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
vue-frontend/src/: App.vue  main.ts
vue-frontend/src/assets/styles/: index.scss
vue-frontend/src/components/: StatCard.vue
vue-frontend/src/layout/: index.vue
vue-frontend/src/router/: index.ts
vue-frontend/src/store/: user.ts
vue-frontend/src/utils/: request.ts
vue-frontend/src/views/Community/: index.vue
vue-frontend/src/views/Dashboard/: index.vue
vue-frontend/src/views/Health/: index.vue
vue-frontend/src/views/Login/: index.vue
vue-frontend/src/views/MyHealth/: index.vue
vue-frontend/src/views/Resident/: index.vue
vue-frontend/src/views/System/: Users.vue
vue-frontend/src/views/Visit/: index.vue
